syntax="proto3";

package auth;

service Auth {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc IsAdmin (IsAdminRequest) returns (IsAdminRespons);
}

message LoginRequest {
    string email = 1;
    string password = 2;
    int32 app_id = 3;
}

message LoginResponse {
    string token = 1;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    string user_id = 1;
}

message IsAdminRequest {
    string user_id = 1; 
}
  
message IsAdminRespons {
    bool is_admin = 1;
}
